[gd_scene load_steps=4 format=3 uid="uid://r2bbs45noqfh"]

[ext_resource type="FontFile" uid="uid://bkhfisgnnj5x4" path="res://assets/Pixel.ttf" id="1_e8yoo"]
[ext_resource type="Script" path="res://scripts/SelectionText.gd" id="2_fenks"]
[ext_resource type="AudioStream" uid="uid://cekolcxupprmi" path="res://assets/audio/typing.wav" id="3_myapm"]

[node name="0" type="Label"]
self_modulate = Color(1.5, 1.5, 1.5, 1)
texture_filter = 1
offset_right = 64.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_e8yoo")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0
script = ExtResource("2_fenks")

[node name="Type" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_myapm")
pitch_scale = 1.2

[node name="Delete" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_myapm")
pitch_scale = 1.5

[node name="Expand" type="Timer" parent="."]
wait_time = 0.08

[node name="Shrink" type="Timer" parent="."]
wait_time = 0.05

[node name="Random" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="Expand" to="." method="_on_expand_timeout"]
[connection signal="timeout" from="Shrink" to="." method="_on_shrink_timeout"]
[connection signal="timeout" from="Random" to="." method="_on_random_timeout"]
